# data_classification_app

./: .gitignore  ACHIEVING_90_95_ACCURACY.md  AI_CLASSIFICATION_UI_FIX.md  ARCHITECTURE_ANALYSIS.md  CENTROID_FIX.md  CHANGES_SUMMARY.md  CLASSIFICATION_LOGIC_EXPLAINED.md  COLUMN_DETECTION_FINAL_FIX.md  COLUMN_DETECTION_FIX.md  CONFIDENCE_BOOST_FIXES.md  CONFIDENCE_IMPROVEMENTS.md  DATA_ASSETS_SCHEMA_FIX.txt  DEBUGGING_GUIDE.md  DETECTION_FIX_PLAN.md  DIAGNOSTIC_REPORT.md  E5_ACCURACY_FIX.md  E5_DETECTION_EXPLAINED.md  E5_UPGRADE_COMPLETE.md  ENHANCED_KEYWORD_EMBEDDING_90_95_ACCURACY.md  FINAL_SUMMARY.md  FIXED_SP_MERGE_ASSETS_FIX.txt  FIXES_IMPLEMENTED.md  FIX_REPORT_SUMMARY.txt  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPORT_ERROR_FIXED.md  INCREMENTAL_RESULTS_FIX.md  METADATA_DRIVEN_CLASSIFICATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PIPELINE_FIXES_SUMMARY.md  PIPELINE_LOGIC_EXPLAINED.md  PIPELINE_SERVICE_FIXES.txt  QUICK_REFERENCE_90_95_ACCURACY.md  QUICK_TEST_GUIDE.md  README.md  README_IMPLEMENTATION.md  SEMANTIC_SEARCH_FIXED.md  SNOWFLAKE_DEPLOYMENT_STABILITY.txt  SQL_ERROR_FIX.txt  (+23 more)
data-governance-app/: .gitattributes  .gitignore  ADMIN_ROLE_ACCESS.md  AI_CLASSIFICATION_ENHANCEMENTS.md  CASE_INSENSITIVE_MATCHING.txt  CLASSIFICATION_ROOT_CAUSE_ANALYSIS.txt  CRITICAL_KEYWORDS_QUICK_REF.txt  CRITICAL_KEYWORDS_REFERENCE.txt  DATA_ASSETS_ENHANCEMENT_SUMMARY.md  DATA_ASSETS_FIXES.md  FIX_INSTRUCTIONS.txt  FIX_SSN_DATABASE.txt  GOVERNANCE_DRIVEN_CLASSIFICATION.md  IMPLEMENTATION_CHECKLIST.txt  INDENTATION_FIXES_COMPLETE.md  INLINE_EDIT_FIX_SUMMARY.txt  INLINE_EDIT_FLOW_COMPLETE.txt  KEYWORD_CLEANUP_SUMMARY.txt  KEYWORD_FIX_GUIDE.txt  METHODS_RESTORED.txt  QUICK_ACTION_SUMMARY.txt  QUICK_TEST_GUIDE.txt  README.md  SCHEMA_FIXED_FINAL.txt  SCHEMA_FIX_SUMMARY.txt  SNOWFLAKE_DEPLOYMENT.txt  SSN_SOC2_ISSUE.txt  STRICT_FILTERING_MODE.md  SYNTAX_ERROR_FIX.txt  SYNTAX_FIXES_APPLIED.md  TAB_RESTRUCTURE_COMPLETE.md  TAGGING_ENGINE_SUMMARY.txt  TAGGING_FLOW_DIAGRAM.txt  WHY_SSN_IS_SOC2.txt  check_assets.py  check_assets_v2.py  cleanup_file.py  compile_check.py  complete_diagnostic.py  debug_centroids.py  (+62 more)
data-governance-app/.agent/: COMPLETE_FIX_STATUS.md  CRITICAL_FIXES_STATUS.md  FIXES_COMPLETE_STATUS.md  IMPORT_ERROR_FIX.md  MASTER_FIX_SUMMARY.md  NO_ASSETS_FIX.md  PHASE1_FIXES_PLAN.md  PYTHON_CODE_FIXES_GUIDE.md  PYTHON_FIXES_COMPLETE.md  SNOWFLAKE_GOVERNANCE_FIXES.sql
data-governance-app/_archive/: 1A_Visualization_Template.py  3_Classification_router.py  7_ML_Compliance_Operations.py
data-governance-app/docs/: AI_CLASSIFICATION.md  API.md  ARCHITECTURE.md  COMPLIANCE_PAGE.md  COMPLIANCE_PAGE_DETAILED.md  DATA_ASSETS_BEFORE_AFTER.md  (+8 more)
(+346 files in other folders)
